--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(NebulaXTestBase
 add_executable(NebulaXTestFoundation
     testfoundation/main.cc
     testfoundation/arraytest.cc
+    testfoundation/atomtest.cc
     testfoundation/stringtest.cc)
 
 target_link_libraries(NebulaXTestFoundation 
