+ float4 test + matrix44 test

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -31,11 +31,11 @@ add_executable(NebulaXTestFoundation
     testfoundation/fileservertest.cc
     testfoundation/streamservertest.cc
     testfoundation/mediatypetest.cc
+    testfoundation/float4test.cc
+    testfoundation/matrix44test.cc
     #testfoundation/iointerfacetest.cc
     #testfoundation/memorypooltest.cc
     #testfoundation/uritest.cc
-    #testfoundation/float4test.cc
-    #testfoundation/matrix44test.cc
     #testfoundation/attributecontainertest.cc
     #testfoundation/attributetabletest.cc
 
